src/yarlcomp/YARLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 D:\\Projects\\YARL\\yarlcomp\\grammar\\YARL.g 2012-09-12 11:28:51

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace DSparx.YARL.Compiler
{
/**
* 
*	YARL GRAMMAR
*	Dimitrios Traskas
*	
*	
**/
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
internal partial class YARLParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ANTECEDENTDEF", "ANTECEDENTSDEF", "CERTAINTYDEF", "CHAR_LITERAL", "COMMENT", "CONSEQUENTDEF", "CONTAINSALL", "DESCDEF", "EXECUTEDEF", "EXPONENT", "FLOAT", "FUZZYRANGEDEF", "FUZZYSETDEF", "FUZZYSETSHAPEDEF", "FUZZYVAR", "ID", "INTEGER", "MINUS", "OPERATORDEF", "PRIORITYDEF", "PROGRAM", "RULECOLLECTIONALLDEFCHOICE", "RULECOLLECTIONDEF", "RULECOLLECTIONDEFCHOICE", "RULEDEF", "RULESETCHOICEDEF", "RULESETDEF", "SHAPEP", "SHAPES", "SHAPEZ", "STRING_LITERAL", "VARIABLEDEF", "WEIGHTDEF", "WHENDEF", "WS", "'$'", "'('", "')'", "','", "'all'", "'and'", "'begin'", "'certainty'", "'contains'", "'desc'", "'end'", "'execute'", "'fuzzyvar'", "'is'", "'or'", "'priority'", "'range'", "'rule'", "'ruleset'", "'set_/'", "'set_/\\\\'", "'set_\\\\'", "'then'", "'weight'", "'when'"
	};
	public const int EOF=-1;
	public const int T__39=39;
	public const int T__40=40;
	public const int T__41=41;
	public const int T__42=42;
	public const int T__43=43;
	public const int T__44=44;
	public const int T__45=45;
	public const int T__46=46;
	public const int T__47=47;
	public const int T__48=48;
	public const int T__49=49;
	public const int T__50=50;
	public const int T__51=51;
	public const int T__52=52;
	public const int T__53=53;
	public const int T__54=54;
	public const int T__55=55;
	public const int T__56=56;
	public const int T__57=57;
	public const int T__58=58;
	public const int T__59=59;
	public const int T__60=60;
	public const int T__61=61;
	public const int T__62=62;
	public const int T__63=63;
	public const int ANTECEDENTDEF=4;
	public const int ANTECEDENTSDEF=5;
	public const int CERTAINTYDEF=6;
	public const int CHAR_LITERAL=7;
	public const int COMMENT=8;
	public const int CONSEQUENTDEF=9;
	public const int CONTAINSALL=10;
	public const int DESCDEF=11;
	public const int EXECUTEDEF=12;
	public const int EXPONENT=13;
	public const int FLOAT=14;
	public const int FUZZYRANGEDEF=15;
	public const int FUZZYSETDEF=16;
	public const int FUZZYSETSHAPEDEF=17;
	public const int FUZZYVAR=18;
	public const int ID=19;
	public const int INTEGER=20;
	public const int MINUS=21;
	public const int OPERATORDEF=22;
	public const int PRIORITYDEF=23;
	public const int PROGRAM=24;
	public const int RULECOLLECTIONALLDEFCHOICE=25;
	public const int RULECOLLECTIONDEF=26;
	public const int RULECOLLECTIONDEFCHOICE=27;
	public const int RULEDEF=28;
	public const int RULESETCHOICEDEF=29;
	public const int RULESETDEF=30;
	public const int SHAPEP=31;
	public const int SHAPES=32;
	public const int SHAPEZ=33;
	public const int STRING_LITERAL=34;
	public const int VARIABLEDEF=35;
	public const int WEIGHTDEF=36;
	public const int WHENDEF=37;
	public const int WS=38;

	public YARLParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public YARLParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return YARLParser.tokenNames; } }
	public override string GrammarFileName { get { return "D:\\Projects\\YARL\\yarlcomp\\grammar\\YARL.g"; } }


	  public override void ReportError(RecognitionException e) {
	    throw e;
	  }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_program();
	partial void LeaveRule_program();

	// $ANTLR start "program"
	// D:\\Projects\\YARL\\yarlcomp\\grammar\\YARL.g:67:8: public program : ( fuzzyvarDef | ruleDef | rulesetDef | executeDef )+ -> ^( PROGRAM ( fuzzyvarDef )+ ( ruleDef )+ ( rulesetDef )+ ( executeDef )+ ) ;
	[GrammarRule("program")]
	public AstParserRuleReturnScope<CommonTree, CommonToken> program()
	{
		EnterRule_program();
		EnterRule("program", 1);
		TraceIn("program", 1);
		AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		AstParserRuleReturnScope<CommonTree, CommonToken> fuzzyvarDef1 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> ruleDef2 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> rulesetDef3 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> executeDef4 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

		RewriteRuleSubtreeStream stream_executeDef=new RewriteRuleSubtreeStream(adaptor,"rule executeDef");
		RewriteRuleSubtreeStream stream_fuzzyvarDef=new RewriteRuleSubtreeStream(adaptor,"rule fuzzyvarDef");
		RewriteRuleSubtreeStream stream_ruleDef=new RewriteRuleSubtreeStream(adaptor,"rule ruleDef");
		RewriteRuleSubtreeStream stream_rulesetDef=new RewriteRuleSubtreeStream(adaptor,"rule rulesetDef");
		try { DebugEnterRule(GrammarFileName, "program");
		DebugLocation(67, 1);
		try
		{
			// D:\\Projects\\YARL\\yarlcomp\\grammar\\YARL.g:68:2: ( ( fuzzyvarDef | ruleDef | rulesetDef | executeDef )+ -> ^( PROGRAM ( fuzzyvarDef )+ ( ruleDef )+ ( rulesetDef )+ ( executeDef )+ ) )
			DebugEnterAlt(1);
			// D:\\Projects\\YARL\\yarlcomp\\grammar\\YARL.g:68:4: ( fuzzyvarDef | ruleDef | rulesetDef | executeDef )+
			{
			DebugLocation(68, 4);
			// D:\\Projects\\YARL\\yarlcomp\\grammar\\YARL.g:68:4: ( fuzzyvarDef | ruleDef | rulesetDef | executeDef )+
			int cnt1=0;
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=5;
				try { DebugEnterDecision(1, false);
				switch (input.LA(1))
				{
				case 51:
					{
					alt1 = 1;
					}
					break;
				case 56:
					{
					alt1 = 2;
					}
					break;
				case 57:
					{
					alt1 = 3;
					}
					break;
				case 50:
					{
					alt1 = 4;
					}
					break;
				}

				} finally { DebugExitDecision(1); }
				switch (alt1)
				{
				case 1:
					DebugEnterAlt(1);
					// D:\\Projects\\YARL\\yarlcomp\\grammar\\YARL.g:68:5: fuzzyvarDef
					{
					DebugLocation(68, 5);
					PushFollow(Follow._fuzzyvarDef_in_program188);
					fuzzyvarDef1=fuzzyvarDef();
					PopFollow();

					stream_fuzzyvarDef.Add(fuzzyvarDef1.Tree);

					}
					break;
				case 2:
					DebugEnterAlt(2);
					// D:\\Projects\\YARL\\yarlcomp\\grammar\\YARL.g:68:19: ruleDef
					{
					DebugLocation(68, 19);
					PushFollow(Follow._ruleDef_in_program192);
					ruleDef2=ruleDef();
					PopFollow();

					stream_ruleDef.Add(ruleDef2.Tree);

					}
					break;
				case 3:
					DebugEnterAlt(3);
					// D:\\Projects\\YARL\\yarlcomp\\grammar\\YARL.g:68:29: rulesetDef
					{
					DebugLocation(68, 29);
					PushFollow(Follow._rulesetDef_in_program196);
					rulesetDef3=rulesetDef();
					PopFollow();

					stream_rulesetDef.Add(rulesetDef3.Tree);

					}
					break;
				case 4:
					DebugEnterAlt(4);
					// D:\\Projects\\YARL\\yarlcomp\\grammar\\YARL.g:68:42: executeDef
					{
					DebugLocation(68, 42);
					PushFollow(Follow._executeDef_in_program200);
					executeDef4=executeDef();
					PopFollow();

					stream_executeDef.Add(executeDef4.Tree);

					}
					break;

				default:
					if (cnt1 >= 1)
						goto loop1;

					EarlyExitException eee1 = new EarlyExitException( 1, input );
					DebugRecognitionException(eee1);
					throw eee1;
				}
				cnt1++;
			}
			loop1:
				;

			} finally { DebugExitSubRule(1); }



			{
			// AST REWRITE
			// elements: executeDef, ruleDef, fuzzyvarDef, rulesetDef
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 69:4: -> ^( PROGRAM ( fuzzyvarDef )+ ( ruleDef )+ ( rulesetDef )+ ( executeDef )+ )
			{
				DebugLocation(69, 7);
				// D:\\Projects\\YARL\\yarlcomp\\grammar\\YARL.g:69:7: ^( PROGRAM ( fuzzyvarDef )+ ( ruleDef )+ ( rulesetDef )+ ( executeDef )+ )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(69, 9);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(PROGRAM, "PROGRAM"), root_1);

				DebugLocation(69, 17);
				if (!(stream_fuzzyvarDef.HasNext))
				{
					throw new RewriteEarlyExitException();
				}
				while ( stream_fuzzyvarDef.HasNext )
				{
					DebugLocation(69, 17);
					adaptor.AddChild(root_1, stream_fuzzyvarDef.NextTree());

				}
				stream_fuzzyvarDef.Reset();
				DebugLocation(69, 30);
				if (!(stream_ruleDef.HasNext))
				{
					throw new RewriteEarlyExitException();
				}
				while ( stream_ruleDef.HasNext )
				{
					DebugLocation(69, 30);
					adaptor.AddChild(root_1, stream_ruleDef.NextTree());

				}
				stream_ruleDef.Reset();
				DebugLocation(69, 39);
				if (!(stream_rulesetDef.HasNext))
				{
					throw new RewriteEarlyExitException();
				}
				while ( stream_rulesetDef.HasNext )
				{
					DebugLocation(69, 39);
					adaptor.AddChild(root_1, stream_rulesetDef.NextTree());

				}
				stream_rulesetDef.Reset();
				DebugLocation(69, 51);
				if (!(stream_executeDef.HasNext))
				{
					throw new RewriteEarlyExitException();
				}
				while ( stream_executeDef.HasNext )
				{
					DebugLocation(69, 51);
					adaptor.AddChild(root_1, stream_executeDef.NextTree());

				}
				stream_executeDef.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (CommonToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}

		   catch (RecognitionException e) {
		    throw e;
		   }

		finally
		{
			TraceOut("program", 1);
			LeaveRule("program", 1);
			LeaveRule_program();
		}
		DebugLocation(70, 1);
		} finally { DebugExitRule(GrammarFileName, "program"); }
		return retval;

	}
	// $ANTLR end "program"

	partial void EnterRule_fuzzyvarDef();
	partial void LeaveRule_fuzzyvarDef();

	// $ANTLR start "fuzzyvarDef"
	// D:\\Projects\\YARL\\yarlcomp\\grammar\\YARL.g:75:1: fuzzyvarDef : 'fuzzyvar' ID ( fuzzyrangeDef | descDef )* 'begin' ( fuzzysetDef )* 'end' -> ^( FUZZYVAR ID ( fuzzyrangeDef )* ( descDef )* ( fuzzysetDef )* ) ;
	[GrammarRule("fuzzyvarDef")]
	private AstParserRuleReturnScope<CommonTree, CommonToken> fuzzyvarDef()
	{
		EnterRule_fuzzyvarDef();
		EnterRule("fuzzyvarDef", 2);
		TraceIn("fuzzyvarDef", 2);
		AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		CommonToken string_literal5 = default(CommonToken);
		CommonToken ID6 = default(CommonToken);
		CommonToken string_literal9 = default(CommonToken);
		CommonToken string_literal11 = default(CommonToken);
		AstParserRuleReturnScope<CommonTree, CommonToken> fuzzyrangeDef7 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> descDef8 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> fuzzysetDef10 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

		CommonTree string_literal5_tree = default(CommonTree);
		CommonTree ID6_tree = default(CommonTree);
		CommonTree string_literal9_tree = default(CommonTree);
		CommonTree string_literal11_tree = default(CommonTree);
		RewriteRuleITokenStream stream_49=new RewriteRuleITokenStream(adaptor,"token 49");
		RewriteRuleITokenStream stream_45=new RewriteRuleITokenStream(adaptor,"token 45");
		RewriteRuleITokenStream stream_51=new RewriteRuleITokenStream(adaptor,"token 51");
		RewriteRuleITokenStream stream_ID=new RewriteRuleITokenStream(adaptor,"token ID");
		RewriteRuleSubtreeStream stream_fuzzysetDef=new RewriteRuleSubtreeStream(adaptor,"rule fuzzysetDef");
		RewriteRuleSubtreeStream stream_fuzzyrangeDef=new RewriteRuleSubtreeStream(adaptor,"rule fuzzyrangeDef");
		RewriteRuleSubtreeStream stream_descDef=new RewriteRuleSubtreeStream(adaptor,"rule descDef");
		try { DebugEnterRule(GrammarFileName, "fuzzyvarDef");
		DebugLocation(75, 1);
		try
		{
			// D:\\Projects\\YARL\\yarlcomp\\grammar\\YARL.g:76:2: ( 'fuzzyvar' ID ( fuzzyrangeDef | descDef )* 'begin' ( fuzzysetDef )* 'end' -> ^( FUZZYVAR ID ( fuzzyrangeDef )* ( descDef )* ( fuzzysetDef )* ) )
			DebugEnterAlt(1);
			// D:\\Projects\\YARL\\yarlcomp\\grammar\\YARL.g:76:4: 'fuzzyvar' ID ( fuzzyrangeDef | descDef )* 'begin' ( fuzzysetDef )* 'end'
			{
			DebugLocation(76, 4);
			string_literal5=(CommonToken)Match(input,51,Follow._51_in_fuzzyvarDef240);  
			stream_51.Add(string_literal5);

			DebugLocation(76, 15);
			ID6=(CommonToken)Match(input,ID,Follow._ID_in_fuzzyvarDef242);  
			stream_ID.Add(ID6);

			DebugLocation(76, 18);
			// D:\\Projects\\YARL\\yarlcomp\\grammar\\YARL.g:76:18: ( fuzzyrangeDef | descDef )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=3;
				try { DebugEnterDecision(2, false);
				int LA2_0 = input.LA(1);

				if ((LA2_0==55))
				{
					alt2 = 1;
				}
				else if ((LA2_0==48))
				{
					alt2 = 2;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// D:\\Projects\\YARL\\yarlcomp\\grammar\\YARL.g:76:19: fuzzyrangeDef
					{
					DebugLocation(76, 19);
					PushFollow(Follow._fuzzyrangeDef_in_fuzzyvarDef245);
					fuzzyrangeDef7=fuzzyrangeDef();
					PopFollow();

					stream_fuzzyrangeDef.Add(fuzzyrangeDef7.Tree);

					}
					break;
				case 2:
					DebugEnterAlt(2);
					// D:\\Projects\\YARL\\yarlcomp\\grammar\\YARL.g:76:35: descDef
					{
					DebugLocation(76, 35);
					PushFollow(Follow._descDef_in_fuzzyvarDef249);
					descDef8=descDef();
					PopFollow();

					stream_descDef.Add(descDef8.Tree);

					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }

			DebugLocation(77, 3);
			string_literal9=(CommonToken)Match(input,45,Follow._45_in_fuzzyvarDef255);  
			stream_45.Add(string_literal9);

			DebugLocation(78, 3);
			// D:\\Projects\\YARL\\yarlcomp\\grammar\\YARL.g:78:3: ( fuzzysetDef )*
			try { DebugEnterSubRule(3);
			while (true)
			{
				int alt3=2;
				try { DebugEnterDecision(3, false);
				int LA3_0 = input.LA(1);

				if (((LA3_0>=58 && LA3_0<=60)))
				{
					alt3 = 1;
				}


				} finally { DebugExitDecision(3); }
				switch ( alt3 )
				{
				case 1:
					DebugEnterAlt(1);
					// D:\\Projects\\YARL\\yarlcomp\\grammar\\YARL.g:78:3: fuzzysetDef
					{
					DebugLocation(78, 3);
					PushFollow(Follow._fuzzysetDef_in_fuzzyvarDef260);
					fuzzysetDef10=fuzzysetDef();
					PopFollow();

					stream_fuzzysetDef.Add(fuzzysetDef10.Tree);

					}
					break;

				default:
					goto loop3;
				}
			}

			loop3:
				;

			} finally { DebugExitSubRule(3); }

			DebugLocation(79, 3);
			string_literal11=(CommonToken)Match(input,49,Follow._49_in_fuzzyvarDef265);  
			stream_49.Add(string_literal11);



			{
			// AST REWRITE
			// elements: fuzzysetDef, descDef, fuzzyrangeDef, ID
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (CommonTree)adaptor.Nil();
			// 80:3: -> ^( FUZZYVAR ID ( fuzzyrangeDef )* ( descDef )* ( fuzzysetDef )* )
			{
				DebugLocation(80, 6);
				// D:\\Projects\\YARL\\yarlcomp\\grammar\\YARL.g:80:6: ^( FUZZYVAR ID ( fuzzyrangeDef )* ( descDef )* ( fuzzysetDef )* )
				{
				CommonTree root_1 = (CommonTree)adaptor.Nil();
				DebugLocation(80, 8);
				root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(FUZZYVAR, "FUZZYVAR"), root_1);

				DebugLocation(80, 17);
				adaptor.AddChild(root_1, stream_ID.NextNode());
				DebugLocation(80, 20);
				// D:\\Projects\\YARL\\yarlcomp\\grammar\\YARL.g:80:20: ( fuzzyrangeDef )*
				while ( stream_fuzzyrangeDef.HasNext )
				{
					DebugLocation(80, 20);
					adaptor.AddChild(root_1, stream_fuzzyrangeDef.NextTree());

				}
				stream_fuzzyrangeDef.Reset();
				DebugLocation(80, 35);
				// D:\\Projects\\YARL\\yarlcomp\\grammar\\YARL.g:80:35: ( descDef )*
				while ( stream_descDef.HasNext )
				{
					DebugLocation(80, 35);
					adaptor.AddChild(root_1, stream_descDef.NextTree());

				}
				stream_descDef.Reset();
				DebugLocation(80, 44);
				// D:\\Projects\\YARL\\yarlcomp\\grammar\\YARL.g:80:44: ( fuzzysetDef )*
				while ( stream_fuzzysetDef.HasNext )
				{
					DebugLocation(80, 44);
					adaptor.AddChild(root_1, stream_fuzzysetDef.NextTree());

				}
				stream_fuzzysetDef.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (CommonToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}

		   catch (RecognitionException e) {
		    throw e;
		   }

		finally
		{
			TraceOut("fuzzyvarDef", 2);
			LeaveRule("fuzzyvarDef", 2);
			LeaveRule_fuzzyvarDef();
		}
		DebugLocation(81, 1);
		} finally { DebugExitRule(GrammarFileName, "fuzzyvarDef"); }
		return retval;

	}
	// $ANTLR end "fuzzyvarDef"

	partial void EnterRule_ruleDef();
	partial void LeaveRule_ruleDef();

	// $ANTLR start "ruleDef"
	// D:\\Projects\\YARL\\yarlcomp\\grammar\\YARL.g:83:1: ruleDef : 'rule' ID ( certaintyDecl | priorityDecl | descDef | weightDecl )* whenStatement 'end' -> ^( RULEDEF ID ( certaintyDecl )* ( priorityDecl )* ( descDef )* ( weightDecl )* whenStatement ) ;
	[GrammarRule("ruleDef")]
	private AstParserRuleReturnScope<CommonTree, CommonToken> ruleDef()
	{
		EnterRule_ruleDef();
		EnterRule("ruleDef", 3);
		TraceIn("ruleDef", 3);
		AstParserRuleReturnScope<CommonTree, CommonToken> retval = new AstParserRuleReturnScope<CommonTree, CommonToken>();
		retval.Start = (CommonToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		CommonToken string_literal12 = default(CommonToken);
		CommonToken ID13 = default(CommonToken);
		CommonToken string_literal19 = default(CommonToken);
		AstParserRuleReturnScope<CommonTree, CommonToken> certaintyDecl14 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> priorityDecl15 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> descDef16 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> weightDecl17 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);
		AstParserRuleReturnScope<CommonTree, CommonToken> whenStatement18 = default(AstParserRuleReturnScope<CommonTree, CommonToken>);

		CommonTree string_literal12_tree = default(CommonTree);
		CommonTree ID13_tree = default(CommonTree);
		CommonTree string_literal19_tree = default(CommonTree);
		RewriteRuleITokenStream stream_49=new RewriteRuleITokenStream(adaptor,"token 49");
		RewriteRuleITokenStream stream_56=new RewriteRuleITokenStream(adaptor,"token 56");
		RewriteRuleITokenStream stream_ID=new RewriteRuleITokenStream(adaptor,"token ID");
		RewriteRuleSubtreeStream stream_certaintyDecl=new RewriteRuleSubtreeStream(adaptor,"rule certaintyDecl");
		RewriteRuleSubtreeStream stream_priorityDecl=new RewriteRuleSubtreeStream(adaptor,"rule priorityDecl");
		RewriteRuleSubtreeStream stream_whenStatement=new RewriteRuleSubtreeStream(adaptor,"rule whenStatement");
		RewriteRuleSubtreeStream stream_weightDecl=new RewriteRuleSubtreeStream(adaptor,"rule weightDecl");
		RewriteRuleSubtreeStream stream_descDef=new RewriteRuleSubtreeStream(adaptor,"rule descDef");
		try { DebugEnterRule(GrammarFileName, "ruleDef");
		DebugLocation(83, 5);
		try
		{
			// D:\\Projects\\YARL\\yarlcomp\\grammar\\YARL.g:84:6: ( 'rule' ID ( certaintyDecl | priorityDecl | descDef | weightDecl )* whenStatement 'end' -> ^( RULEDEF ID ( certaintyDecl )* ( priorityDecl )* ( descDef )* ( weightDecl )* whenStatement ) )
			DebugEnterAlt(1);
			// D:\\Projects\\YARL\\yarlcomp\\grammar\\YARL.g:84:8: 'rule' ID ( certaintyDecl | priorityDecl | descDef | weightDecl )* whenStatement 'end'
			{
			DebugLocation(84, 8);
			string_literal12=(CommonToken)Match(input,56,Follow._56_in_ruleDef300);  
			stream_56.Add(string_literal12);

			DebugLocation(84, 15);
			ID13=(CommonToken)Match(input,ID,Follow._ID_in_ruleDef302);  
			stream_ID.Add(ID13);

			DebugLocation(85, 8);
			// D:\\Projects\\YARL\\yarlcomp\\grammar\\YARL.g:85:8: ( certaintyDecl | priorityDecl | descDef | weightDecl )*
			try { DebugEnterSubRule(4);
			while (true)
			{
				int alt4=5;
				try { DebugEnterDecision(4, false);
				switch (input.LA(1))
				{
				case 46:
					{
					alt4 = 1;
					}
					break;
				case 54:
					{
					alt4 = 2;
					}
					break;
				case 48:
					{
					alt4 = 3;
					}
					break;
				case 62:
					{
					alt4 = 4;
					}
					break;
				}
